# esp-idf-threadx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  errors.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.obsidian/: workspace.json
components/freertos/: CMakeLists.txt  Kconfig
components/freertos/threadx/include/: FreeRTOSConfig.h  esp_freertos_hooks.h
components/freertos/threadx/include/esp_private/: freertos_debug.h  freertos_idf_additions_priv.h
components/freertos/threadx/include/freertos/: FreeRTOS.h  FreeRTOSConfig.h  atomic.h  event_groups.h  idf_additions.h  list.h  message_buffer.h  portable.h  portmacro.h  projdefs.h  queue.h  semphr.h  stream_buffer.h  task.h  timers.h
components/freertos/threadx/src/: app_startup.c  freertos_hooks.c  port.c  rtos_int_hooks.S
components/freertos_compat/: CMakeLists.txt
components/freertos_compat/include/: FreeRTOSConfig.h
components/freertos_compat/include/freertos/: portmacro.h
components/freertos_compat/src/: port.c
components/threadx/: CMakeLists.txt  Kconfig  linker.lf
components/threadx/include/: tx_user.h
components/threadx/port/: tx_esp32c6_timer.c  tx_initialize_low_level.S  tx_port_startup.c  tx_timer_interrupt.c
docs/: architecture.md  assembly-deep-dive.md  bug-history.md  freertos-compat.md  hardware-interrupts.md
docs/implementation/: README.md  architecture.md  assembly-deep-dive.md  bug-history.md  build-reference.md  debugging-gdb-openocd.md  hardware-interrupts.md  threadx-port.md  wifi-port.md
docs/planning/: esp32c6-hardware-investigation.md  threadx-esp-investigation-roadmap.md  threadx-menuconfig-integration-spec.md
docs/planning/investigations/: phase0-1-esp-hal-deep-dive.md  phase0-2-threadx-integration-requirements.md  phase0-4-esp32c6-specifics.md
docs/planning/investigations/.obsidian/: workspace.json
examples/freertos_demo/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
examples/freertos_demo/main/: CMakeLists.txt  main.c
examples/threadx_demo/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
examples/threadx_demo/main/: CMakeLists.txt  main.c
examples/wifi_demo/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
examples/wifi_demo/main/: CMakeLists.txt  main.c
investigations/: phase0-3-wifi-bt-stack-analysis.md
main/: CMakeLists.txt  main.c
patches/threadx/: 0001-esp-idf-port-pre-kernel-task-reregistration-wifi-fix.patch  apply.sh
